[tool.poetry]
name = "probable_octo_bassoon"
version = "0.1.0"
description = "Script to create a number of resouces in kuadrant  with collecting the timings of the resource creation"
authors = ["Jim Fitzpatrick <jimfity@gmail.com>"]
readme = "README.md"
# package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.9.4"
kubernetes-asyncio = "^32.0.0"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
